[project]
name = "gera_mensagens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.28",
    "langchain-groq>=0.3.7",
    "st-copy-to-clipboard>=0.1.6",
    "streamlit>=1.49.0",
]
